force-app/main/default/objects/ccrz__E_ProductCategory__c/ccrz__E_ProductCategory__c.object-meta.xml
<CustomObject>
    <description>The Product Category is a link table which link product with category. It is a many-to-many relationship.</description>
    <label>CC Product Category</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ProductCatAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>