force-app/main/default/objects/ccrz__E_ProductCategory__c/fields/ccrz__Category__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Category__c</fullName>
    <description>Reference to the Category</description>
    <label>Category</label>
    <referenceTo>ccrz__E_Category__c</referenceTo>
    <relationshipLabel>Product Categories</relationshipLabel>
    <relationshipName>Product_Categories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>