force-app/main/default/objects/ccrz__E_ProductCategory__c/fields/ccrz__EndDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EndDate__c</fullName>
    <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
    <description>The last date that this association of product to category is available</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>