force-app/main/default/objects/ccrz__E_ProductCategory__c/fields/ccrz__IsCanonicalPath__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IsCanonicalPath__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value which flags a Category as the Canonical path for a Product. This is used for determining SEO Friendly URLs.</description>
    <inlineHelpText>Flag this Category as the Canonical Path for the Product. This is used for determining SEO Friendly URLs.</inlineHelpText>
    <label>Canonical Path</label>
    <type>Checkbox</type>
</CustomField>