force-app/main/default/objects/ccrz__E_ProductCategory__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <description>Product contained within the associated category. The same product can exist within multiple categories</description>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Product Categories</relationshipLabel>
    <relationshipName>Product_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>