force-app/main/default/objects/ccrz__E_ProductCategory__c/fields/ccrz__ProductCategoryId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductCategoryId__c</fullName>
    <description>External reference id</description>
    <externalId>true</externalId>
    <label>Product Category Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>